add login form & add componet form-item

--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -1,2 +1,8 @@
 @import './mixin/bem.scss';
 @import './mixin/layout.scss';
+
+@import './reset/input.scss';
+
+@import './common/form.scss';
+
+@import './var/color.scss';
