--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -3,6 +3,7 @@
 
 @import './reset/input.scss';
 
-@import './common/form.scss';
-
 @import './var/color.scss';
+
+@import './common/form.scss';
+@import './common/input.scss';
