--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -1,9 +1,12 @@
+@import './reset/input.scss';
+
 @import './mixin/bem.scss';
 @import './mixin/layout.scss';
 
-@import './reset/input.scss';
-
 @import './var/color.scss';
 
-@import './common/form.scss';
-@import './common/input.scss';
+@import './animation/slide.scss';
+
+@import './component/input.scss';
+@import './component/button.scss';
+@import './component/icon.scss';
