add component: message

--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -10,3 +10,4 @@
 @import './component/input.scss';
 @import './component/button.scss';
 @import './component/icon.scss';
+@import './component/message.scss';
