add component: Loadingbar

--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -11,3 +11,4 @@
 @import './component/button.scss';
 @import './component/icon.scss';
 @import './component/message.scss';
+@import './component/loadingbar.scss';
