add component: NavMenu

--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -1,4 +1,5 @@
 @import './reset/input.scss';
+@import './reset/html.scss';
 
 @import './mixin/bem.scss';
 @import './mixin/layout.scss';
@@ -12,3 +13,5 @@
 @import './component/icon.scss';
 @import './component/message.scss';
 @import './component/loadingbar.scss';
+@import './component/container.scss';
+@import './component/nav-menu.scss';
