--- a/be/src/views/login/style.scss
+++ b/be/src/views/login/style.scss
@@ -5,7 +5,7 @@
 
   width: 100vw;
   height: 100vh;
-  background-color: #2d3a4b;
+  background-color: $bg;
 
   align-items: center;
   flex-direction: column;
