--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -15,3 +15,4 @@
 @import './component/loadingbar.scss';
 @import './component/container.scss';
 @import './component/nav-menu.scss';
+@import './component/header.scss';
