--- a/be/src/theme/component/nav-menu.scss
+++ b/be/src/theme/component/nav-menu.scss
@@ -3,6 +3,7 @@
 @import '../var/color.scss';
 
 @include b(navmenu) {
+  position: relative;
   width: 100%;
   height: 100%;
 
@@ -53,7 +54,7 @@
 
       .fa-icon__arrow {
         position: absolute;
-        right: 15px;
+        right: 5px;
         font-size: 1em;
 
         transition: all ease .3s;
@@ -71,11 +72,123 @@
     li {
       a {
         padding-left: 30px;
+        background-color: #1f2d3d;
 
         &:hover {
           background-color: #001528;
         }
       }
     }
+  }
+
+  // 当菜单折叠时的样式
+  @include when(collapse) {
+    li {
+      // position: relative;
+      // max-height: 56px !important;
+      // overflow: visible;
+
+      a, p {
+        padding-left: 0;
+        align-items: center;
+        @include flexLayout();
+
+        .fa-icon__arrow {
+          display: none;
+        }
+      }
+
+      .fa-icon {
+        margin-right: 0;
+      }
+
+      span {
+        // position: absolute;
+        // left: 47px;
+        // z-index: 1000;
+
+        // width: 140px;
+        // height: 100%;
+
+        // align-items: center;
+        // @include flexLayout();
+        // background-color: inherit;
+        display: none;
+
+        // &:hover {
+        //   display: block;
+        // }
+      }
+
+      > ul {
+        display: none;
+        // position: absolute;
+        // left: 47px;
+        // top: 0;
+  
+        // li {
+        //   width: 140px;
+        //   height: 100%;
+        //   position: relative;
+
+        //   p {
+        //     padding-left: 10px;
+
+        //     .fa-icon {
+        //       display: block;
+        //       margin-left: 5px;
+        //     }
+
+        //     span {
+        //       box-sizing: border-box;              
+        //       padding: 15px;
+        //       justify-content: flex-start;
+        //     }
+
+        //     .fa-icon__arrow {
+        //       display: block;
+        //       transform: rotate(-90deg);
+        //       right: 10px;
+        //     }
+        //   }
+
+        //   > ul {
+        //     display: none;
+        //     left: 142px;
+
+        //     &:hover {
+        //       display: block;
+        //     }
+        //   }
+
+        //   a {
+        //     padding: 0;
+        //   }
+
+        //   span {
+        //     position: relative;
+        //     left: 0;
+        //   }
+        // }
+
+        // li.is-opened {
+        //   display: block;
+
+        //   > ul {
+        //     display: block;
+        //   }
+        // }
+      }
+    }
+
+    // li.is-opened {
+    //   span {
+    //     display: flex;
+    //   }
+
+    //   > ul {
+    //     display: block;
+    //   }
+    // }
   }
 }
