--- a/be/src/theme/component/header.scss
+++ b/be/src/theme/component/header.scss
@@ -13,7 +13,7 @@
   align-items: center;
   @include flexLayout(space-between, inline-flex);
 
-  .tz-icon {
+  .ta-icon {
     cursor: pointer;
     font-size: 1.8em;
     margin-right: 15px;
