--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -9,6 +9,7 @@
 @import './animation/fade.scss';
 @import './animation/slide.scss';
 @import './animation/loading.scss';
+@import './animation/rotate.scss';
 
 @import './component/input.scss';
 @import './component/button.scss';
@@ -19,3 +20,7 @@
 @import './component/container.scss';
 @import './component/nav-menu.scss';
 @import './component/header.scss';
+@import './component/dialog.scss';
+@import './component/form-item.scss';
+@import './component/select.scss';
+@import './component/tag.scss';
