now can publish article

--- a/be/src/theme/component/button.scss
+++ b/be/src/theme/component/button.scss
@@ -22,6 +22,11 @@
 
   transition: all ease .1s;
 
+  &:disabled {
+    opacity: .5;
+    cursor: not-allowed;
+  }
+
   :nth-of-type() {
     margin-left: 15px;
   }
