--- a/be/src/theme/component/input.scss
+++ b/be/src/theme/component/input.scss
@@ -30,3 +30,32 @@
     border-color: $danger;
   }
 }
+
+@include b(textarea) {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 80px;
+  padding: 5px 12px;
+
+  font-size: inherit;
+  line-height: 1;
+
+  background-image: none;
+  background-color: #fff;
+
+  border-radius: 4px;
+  border: 1px solid $border;
+  outline: none;
+
+  transition: border-color .2s cubic-bezier(.645,.045, .355, 1);
+
+  &:focus,
+  &:active {
+    border-color: $primary;
+  }
+
+  @include when(invalid) {
+    border-color: $danger;
+  }
+}
