--- a/be/src/theme/component/container.scss
+++ b/be/src/theme/component/container.scss
@@ -43,9 +43,10 @@
 
     main {
       box-sizing: border-box;
-      padding: 30px;
+      padding: 15px;
       flex: 1;
       overflow: auto;
+      background-color: #f0f0f0;
     }
   }
 }
