--- a/be/src/theme/mixin/layout.scss
+++ b/be/src/theme/mixin/layout.scss
@@ -10,6 +10,8 @@
 @mixin flexLayout($justify: center, $display: flex) {
   display: $display;
   justify-content: $justify;
+
+  @content;
 }
 
 @mixin center() {
