--- a/be/src/theme/component/form-item.scss
+++ b/be/src/theme/component/form-item.scss
@@ -9,8 +9,12 @@
   align-items: center;
   @include flexLayout();
 
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
   label {
-    width: 5em;
+    margin-right: 1em;
   }
 
   input, select {
