--- a/be/src/theme/reset/html.scss
+++ b/be/src/theme/reset/html.scss
@@ -34,3 +34,7 @@ a {
 .CodeMirror, .editor-toolbar {
   border-color: #e9eaec !important;
 }
+
+.ta-icon::before {
+  transform: translateY(2px);
+}
