--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -24,3 +24,4 @@
 @import './component/form-item.scss';
 @import './component/select.scss';
 @import './component/tag.scss';
+@import './component/upload.scss';
