--- a/be/src/views/login/style.scss
+++ b/be/src/views/login/style.scss
@@ -12,7 +12,7 @@
   @include flexLayout(flex-start);
 
   @include e(form) {
-    width: 360px;
+    width: 420px;
     padding: 15px 30px;
     text-align: center;
     margin: 180px auto;
@@ -26,5 +26,6 @@
 
   @include e(button) {
     width: 100%;
+    margin-top: 22px;
   }
 }
