--- a/be/src/theme/component/nav-menu.scss
+++ b/be/src/theme/component/nav-menu.scss
@@ -102,7 +102,7 @@
         margin-right: 0;
       }
 
-      > span {
+      span {
         position: absolute;
         left: 47px;
         z-index: 1000;
