--- a/be/src/theme/component/nav-menu.scss
+++ b/be/src/theme/component/nav-menu.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding: 52px 0;
+  // padding: 52px 0;
 
   background-color: $bg;
   font-size: 14px;
@@ -91,7 +91,7 @@
 
       &:hover {
         background-color: #1f2d3d;
-        
+
         > div > a,
         > ul {
           display: block;
