--- a/be/src/theme/component/upload.scss
+++ b/be/src/theme/component/upload.scss
@@ -6,15 +6,22 @@
   border: 1.2px dashed $primary;
 }
 
+@mixin preview {
+  border: 1.2px solid $primary;
+}
+
 @include b(upload) {
   box-sizing: border-box;
   width: 100%;
 
   @include e(container) {
     box-sizing: border-box;
-    height: 180px;
+    min-height: 180px;
+    max-height: 420px;
     border: 1px dashed #eee;
     border-radius: 4px;
+    overflow: hidden;
+
     @include flexLayout() {
       align-items: center;
     }
@@ -25,6 +32,10 @@
   
     @include when(active) {
       @include active;
+    }
+
+    @include when(preview) {
+      @include preview;
     }
   
     > div {
@@ -65,6 +76,11 @@
     span {
       color: $primary;
     }
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
   }
 
   input {
