--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -25,3 +25,4 @@
 @import './component/select.scss';
 @import './component/tag.scss';
 @import './component/upload.scss';
+@import './component/collapse.scss';
