--- a/be/src/theme/index.scss
+++ b/be/src/theme/index.scss
@@ -1,28 +1,5 @@
-@import './reset/input.scss';
-@import './reset/html.scss';
+@import './mixin/index.scss';
+@import './common/index.scss';
+@import './animation/index.scss';
+@import './component/index.scss';
 
-@import './mixin/bem.scss';
-@import './mixin/layout.scss';
-
-@import './var/color.scss';
-
-@import './animation/fade.scss';
-@import './animation/slide.scss';
-@import './animation/loading.scss';
-@import './animation/rotate.scss';
-
-@import './component/input.scss';
-@import './component/button.scss';
-@import './component/icon.scss';
-@import './component/message.scss';
-@import './component/loadingbar.scss';
-@import './component/loading.scss';
-@import './component/container.scss';
-@import './component/nav-menu.scss';
-@import './component/header.scss';
-@import './component/dialog.scss';
-@import './component/form-item.scss';
-@import './component/select.scss';
-@import './component/tag.scss';
-@import './component/upload.scss';
-@import './component/collapse.scss';
