--- a/be/src/theme/component/button.scss
+++ b/be/src/theme/component/button.scss
@@ -1,13 +1,9 @@
-@import '../mixin/bem.scss';
-@import '../mixin/layout.scss';
-@import '../var/color.scss';
-
 @include b(button) {
   display: inline-block;
   box-sizing: border-box;
   cursor: pointer;
 
-  padding: 11px 20px;
+  padding: 10px 20px;
 
   background-color: #fff;
   border: 1px solid $border;
@@ -21,6 +17,10 @@
   white-space: nowrap;
 
   transition: all ease .1s;
+
+  @include flexLayout() {
+    align-items: center;
+  }
 
   &:disabled {
     opacity: .5;
@@ -38,7 +38,7 @@
   @include flexLayout(center, inline-flex);
 
   i {
-    margin-right: 10px;
+    margin-right: 6px;
   }
 
   &:hover,
@@ -67,6 +67,17 @@
     border-color: $info;
     color: #fff;
 
+    &:hover,
+    &:focus, {
+      background-color: #a6a9ad;
+      border-color: #a6a9ad;
+      color: #fff;
+    }
+  }
+
+  @include m(text) {
+    border-color: transparent;
+    
     &:hover,
     &:focus, {
       background-color: #a6a9ad;
