--- a/be/src/theme/component/nav-menu.scss
+++ b/be/src/theme/component/nav-menu.scss
@@ -10,7 +10,7 @@
 
   li {
     position: relative;
-    max-height: 56px;
+    height: 56px;
     transition: all ease .3s;
     overflow: hidden;
 
