--- a/be/src/theme/component/header.scss
+++ b/be/src/theme/component/header.scss
@@ -17,13 +17,27 @@
   }
 
   > div {
-    align-items: center;
+    align-items: stretch;
     @include flexLayout(center, inline-flex);
 
     span {
       font-size: .8em;
       color: $font;
-      transform: translateY(-1px);
+      align-items: center;
+      @include flexLayout(center, inline-flex);
+
+      + span, 
+      a {
+        margin-left: 5px;
+      }
+
+      a {
+        color: inherit;
+      }
+
+      a.router-link-exact-active {
+        color: $primary;
+      }
     }
   }
 
@@ -49,62 +63,66 @@
 
   @include e(avatar-dropmenu) {
     position: fixed;
-    right: 15px;
-    top: 58px;
+    right: 20px;
+    top: 43px;
     z-index: 1000;
 
-    box-sizing: border-box;
-    width: 90px;
-    padding: 5px 0;
-    background-color: #fff;
-    box-shadow: 0 2px 12px rgba(0, 0, 0, .1);
-    border: 1px solid #ebeef5;
-    border-radius: 4px;
+    padding: 15px 0;
 
-    &::before {
-      display: block;
-      content: '';
+    ul {
+      box-sizing: border-box;
+      width: 90px;
+      padding: 5px 0;
+      background-color: #fff;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, .1);
+      border: 1px solid #ebeef5;
+      border-radius: 4px;
 
-      position: absolute;
-      top: -16px;
-      right: 10px;
-      
-      border-top: 8px solid transparent;
-      border-right: 8px solid transparent;
-      border-bottom: 8px solid #ebeef5;
-      border-left: 8px solid transparent;   
-    }
+      &::before {
+        display: block;
+        content: '';
 
-    &::after {
-      display: block;
-      content: '';
-
-      position: absolute;
-      top: -15px;
-      right: 10px;
-
-      border-top: 8px solid transparent;
-      border-right: 8px solid transparent;
-      border-bottom: 8px solid #fff;
-      border-left: 8px solid transparent;      
-    }
-
-    li {
-      line-height: 30px;
-      padding: 0 10px;
-      font-size: 14px;
-      color: $font;
-
-      &:hover {
-        background-color: #ecf5ff;
-        color: #66b1ff;
+        position: absolute;
+        top: 0px;
+        right: 10px;
+        
+        border-top: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 8px solid #ebeef5;
+        border-left: 8px solid transparent;   
       }
-    }
 
-    .cut-off {
-      height: 1px;
-      background: #ebeef5;
-      margin: 5px 0;
+      &::after {
+        display: block;
+        content: '';
+
+        position: absolute;
+        top: 0px;
+        right: 10px;
+
+        border-top: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-bottom: 8px solid #fff;
+        border-left: 8px solid transparent;      
+      }
+
+      li {
+        line-height: 30px;
+        padding: 0 10px;
+        font-size: 14px;
+        color: $font;
+
+        &:hover {
+          background-color: #ecf5ff;
+          color: #66b1ff;
+        }
+      }
+
+      .cut-off {
+        height: 1px;
+        background: #ebeef5;
+        margin: 5px 0;
+      }
     }
   }
 }
