--- a/be/src/theme/component/notification.scss
+++ b/be/src/theme/component/notification.scss
@@ -1,17 +1,11 @@
-@mixin flexLayout($jutify: center) {
-  display: flex;
-  justify-content: $jutify;
-  align-items: center;
-}
-
-.notification {
+@include b(notification) {
   position: fixed;
   top: 5px;
   right: 10px;
   z-index: 1000;
 
   width: 300px;
-  padding: 14px 26px 14px 13px;
+  padding: 14px -10px 14px 13px;
   border-radius: 8px;
   border: 1px solid #e6ebf5;
   background-color: #fff;
@@ -22,10 +16,10 @@
   @include flexLayout(flex-start);
   align-items: stretch;
 
-  @for $i from 2 through 10 {
+  @for $i from 2 through 100 {
     &:nth-of-type(#{$i}) {
-      top: ($i - 2)*110px;
-      margin-top: 15px;
+      top: ($i - 2)*85px;
+      margin-top: 10px;
     }
   }
 
@@ -37,22 +31,24 @@
     font-weight: normal;
 
     font-size: 14px;
+
+    cursor: pointer;
   }
 
   i {
     font-size: 4em;
   }
 
-  i.fa-info-circle {
-    color: #20a0ff;
+  i.is-success {
+    color: $primary;
   }
 
-  i.fa-check-circle {
-    color: #13ce66;
+  i.is-error {
+    color: $danger;
   }
 
-  i.fa-times-circle {
-    color: #f7ba2a;
+  i.is-info {
+    color: $info;
   }
 
   > div {
