--- a/be/src/theme/component/upload.scss
+++ b/be/src/theme/component/upload.scss
@@ -12,8 +12,7 @@
 
   @include e(container) {
     box-sizing: border-box;
-    min-height: 180px;
-    max-height: 420px;
+    height: 240px;
     border: 1px dashed #eee;
     border-radius: 4px;
     overflow: hidden;
@@ -80,7 +79,7 @@
 
   img {
     width: 100%;
-    height: 100%;
+    max-height: 100%;
   }
 
   input {
