--- a/be/src/theme/mixin/bem.scss
+++ b/be/src/theme/mixin/bem.scss
@@ -29,3 +29,28 @@
     @content;
   }
 }
+
+
+// @include b(table) {
+//   width: 100%;
+//   height: 100%;
+//   // @include flexLayout() {
+//   //   flex-direction: column;
+//   // }
+
+//   @include when(bottom-border) {
+//     position: relative;
+
+//     &::after {
+//       content: '';
+//       display: block;
+//       width: 100%;
+//       height: 1px;
+//       background: pink;
+//     }
+
+//     @include e(body) {
+//       background: red;
+//     }
+//   }
+// }
