--- a/be/src/theme/component/container.scss
+++ b/be/src/theme/component/container.scss
@@ -38,7 +38,8 @@
     flex-direction: column;
     @include flexLayout(flex-start, inline-flex);
 
-    header { 
+    header {
+      // box-shadow: 0 1px 5px rgba(0,0,0,.2), 0 2px 2px rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12);
     }
 
     main {
@@ -46,7 +47,7 @@
       padding: 15px;
       flex: 1;
       overflow: auto;
-      background-color: #f0f0f0;
+      background-color: #f0f2f5;
       // @include flexLayout();
 
       > div {
