--- a/be/src/theme/component/dialog.scss
+++ b/be/src/theme/component/dialog.scss
@@ -82,6 +82,7 @@
       .ta-icon {
         font-size: 24px !important;
         margin-right: 10px;
+        transform: translateY(-2px);
 
         &::before {
           transform: translateY(0px);
