--- a/be/src/theme/mixin/layout.scss
+++ b/be/src/theme/mixin/layout.scss
@@ -15,11 +15,9 @@
 }
 
 @mixin center() {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @mixin clear() {
