--- a/be/src/theme/component/nav-menu.scss
+++ b/be/src/theme/component/nav-menu.scss
@@ -174,6 +174,7 @@
             padding: 0;
   
             a {
+              padding-left: 0;
               text-align: center;
             }
           }
