--- a/be/src/theme/component/dialog.scss
+++ b/be/src/theme/component/dialog.scss
@@ -4,7 +4,7 @@
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   box-sizing: border-box;
-  max-width: 500px;
+  max-width: 50%;
   min-width: 20%;
 
   @include e(wrapper) {
@@ -46,6 +46,8 @@
     color: #606266;
     line-height: 24px;
     font-size: 14px;
+    max-height: 60vh;
+    overflow: auto;
   }
 
   @include e(footer) {
