--- a/be/src/theme/component/select.scss
+++ b/be/src/theme/component/select.scss
@@ -1,10 +1,8 @@
 @include b(select) {
   display: inline-block;
   box-sizing: border-box;
-  width: 100%;
   height: 40px;
-  padding: 5px 12px;
-
+  
   font-size: inherit;
   line-height: 1;
 
@@ -24,5 +22,24 @@
 
   @include when(invalid) {
     border-color: $danger;
+  }
+
+  @include e(container) {
+    width: 100%;
+    @include flexLayout() {
+      align-items: center;
+    };
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+
+    label {
+      margin-right: 1em;
+    }
+
+    input, select {
+      flex: 1;
+    }
   }
 }
