server: add token sign & token verify

--- a/be/src/views/article/style.scss
+++ b/be/src/views/article/style.scss
@@ -39,6 +39,12 @@
     textarea, div {
       flex: 1;
     }
+
+    div {
+      overflow: hidden;
+      overflow-x: auto;
+      padding-bottom: 22px;
+    }
     
     label {
       display: inline-flex;
@@ -79,6 +85,3 @@
     margin-left: 10px;
   }
 }
-
-
-// 0 1px 5px rgba(0,0,0,.2), 0 2px 2px rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12)
