be: add ownspace server: update user controller

--- a/be/src/theme/component/button.scss
+++ b/be/src/theme/component/button.scss
@@ -93,9 +93,9 @@
     
     &:hover,
     &:focus, {
-      background-color: #66b1ff;
-      border-color: #66b1ff;
-      color: #fff;
+      background-color: #fff;
+      border-color: #fff;
+      color: $primary;
     }
   }
 
