--- a/be/src/theme/component/header.scss
+++ b/be/src/theme/component/header.scss
@@ -20,7 +20,7 @@
     align-items: stretch;
     @include flexLayout(center, inline-flex);
 
-    span {
+    &:first-of-type span {
       font-size: .8em;
       color: $font;
       align-items: center;
@@ -53,6 +53,37 @@
   @include e(avatar) {
     position: relative;
     cursor: pointer;
+    @include flexLayout(center) {
+      align-items: center;
+    };
+
+    p {
+      position: relative;
+      max-width: 80px;
+      font-size: 1em;
+      color: $primary;
+      padding: 0 20px;
+      margin-right: 15px;
+      @include textOverflow();
+      @include flexLayout(center) {
+        align-items: center;
+      };
+
+      &::after {
+        display: block;
+        content: '';
+
+        position: absolute;
+        top: 8px;
+        right: 5px;
+
+        border-top: 5px solid $primary;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        border-left: 5px solid transparent;
+        border-radius: 2px;   
+      }
+    }
 
     img {
       width: 36px;
@@ -63,8 +94,8 @@
 
   @include e(avatar-dropmenu) {
     position: fixed;
-    right: 20px;
-    top: 43px;
+    right: 50px;
+    top: 25px;
     z-index: 1000;
 
     padding: 15px 0;
