--- a/be/src/views/article/style.scss
+++ b/be/src/views/article/style.scss
@@ -66,6 +66,11 @@
 
     .body {
       padding: 14px 16px;
+
+      input {
+        width: 100%;
+        margin-bottom: 15px;
+      }
     }
 
     .footer {
